--- a/templates/users/list_of_users_by_office.html
+++ b/templates/users/list_of_users_by_office.html
@@ -308,10 +308,15 @@
                                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
                                             {{ user.phone_number }}
                                         </td>
-                                        
+                                        {% if request.user == user %}
+                                        <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
+                                            <a href="#"></a>
+                                        </td>
+                                        {% else %}
                                         <td class="px-6 py-4 whitespace-nowrap text-right text-sm font-medium">
                                             <a href="{% url 'users:rate_user' pk=user.pk %}" class="text-indigo-600 hover:text-indigo-900">Rate</a>
                                         </td>
+                                        {% endif %}
                                     </tr>
                                     <!-- More people... -->
                                 </tbody>
